# FDNSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  fetch_deps.cmake  readme.md  vcpkg.json
cmake/: llvm-toolchain.cmake  msvc-toolchain.cmake  project-options.cmake  project-warnings.cmake
matlab/: ReadFDNConfig.m  compare_edc.m  compare_ir.m  compare_modes.m
src/: CMakeLists.txt  app.cpp  app.h  app_imconfig.h  fdn_analyzer.cpp  fdn_analyzer.h  fdn_config.cpp  fdn_config.h  fdn_info.cpp  fdn_info.h  fdn_widget.cpp  fdn_widget.h  ir_analyzer.cpp  ir_analyzer.h  main.cpp  main.mm  main_win32_dx12.cpp  optimization_gui.cpp  optimization_gui.h  presets.cpp  presets.h  settings.h  utils.cpp  utils.h  widget.cpp  widget.h
src/analysis/: CMakeLists.txt  analysis.cpp  analysis.h  fdn_analyzer.cpp  fdn_analyzer.h  fractional_octave_bands_filter.py  generate_octave_band_filter.py  ir_analyzer.cpp  ir_analyzer.h  octave_band_coeff.h  octave_band_filters_fir.h
src/optimization/: CMakeLists.txt  loss.cpp  loss.h  main.cpp  model.cpp  model.h  optimizer.cpp  optimizer.h  optuna_test.py  tuning.cpp
